[#25893] can create value list from mdm template